--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,17 +1,12 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+name: Node CI
 
-name: Node.js CI
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v1
       - name: npm install and build webpack
@@ -22,16 +17,15 @@ jobs:
         with:
           name: webpack artifacts
           path: public/
-    needs: build
+  test:
     needs: build
     runs-on: ubuntu-latest
-      - uses: actions/upload-artifact@master
-        with:
-          name: webpack artifacts
-          path: public/
+
+    strategy:
       matrix:
         os: [ubuntu-lastest, windows-2016]
         node-version: [8.x, 10.x]
+
     steps:
     - uses: actions/checkout@v1
     - uses: actions/download-artifact@master
@@ -41,11 +35,7 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-    - uses: actions/download-artifact@master
-      with:
-        name: webpack artifacts
-        path: public
-    - name: npm install, and test
+        node-version: ${{ matrix.node-version }}
     - name: npm install, and test
       run: |
         npm install
